<resources>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="popular_mov">Popular Movies</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="search">Search</string>
    <string name="cast">Cast</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
</resources>