<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.detail.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_25272A"
        android:paddingBottom="39dp">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/popular_mov"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintTop_toTopOf="@id/view"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/popular_mov"
            android:src="@drawable/ic_left_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_rectangle"
            app:layout_constraintDimensionRatio="W,1:0.66"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:fontFamily="@font/sfprotext_medium"
            app:layout_constraintBottom_toTopOf="@id/tv_duration"
            app:layout_constraintEnd_toEndOf="@id/tv_genre"
            app:layout_constraintStart_toStartOf="@id/tv_genre"
            tools:text="@tools:sample/lorem" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:textColor="@color/white_B3FFFFFF"
            android:textSize="12sp"
            app:fontFamily="@font/sfprotext_regular"
            app:layout_constraintBottom_toTopOf="@id/tv_genre"
            app:layout_constraintEnd_toEndOf="@id/tv_genre"
            app:layout_constraintStart_toStartOf="@id/tv_genre"
            tools:text="@tools:sample/lorem" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white_B3FFFFFF"
            android:textSize="12sp"
            app:fontFamily="@font/sfprotext_regular"
            app:layout_constraintBottom_toTopOf="@id/btn_watch_trailer"
            app:layout_constraintEnd_toEndOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="@id/tv_description"
            tools:text="@tools:sample/lorem" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_watch_trailer"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="30dp"
            android:text="@string/watch_trailer"
            android:textAllCaps="false"
            android:textColor="@color/black_202123"
            android:textSize="12sp"
            app:backgroundTint="@color/yellow_FFD130"
            app:cornerRadius="4dp"
            app:fontFamily="@font/sfprotext_regular"
            app:icon="@drawable/ic_aperture"
            app:iconGravity="textStart"
            app:iconPadding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toStartOf="@id/btn_favorite"
            app:layout_constraintStart_toStartOf="@id/view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_favorite"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/add_to_favorite"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:cornerRadius="4dp"
            app:fontFamily="@font/sfprotext_regular"
            app:icon="@drawable/ic_plus"
            app:iconGravity="textStart"
            app:iconPadding="4dp"
            app:iconTint="@color/yellow_FFD130"
            app:layout_constraintBottom_toBottomOf="@id/btn_watch_trailer"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintStart_toEndOf="@id/btn_watch_trailer"
            app:layout_constraintTop_toTopOf="@id/btn_watch_trailer"
            app:strokeColor="@color/white_1FFFFFFF"
            app:strokeWidth="1dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white_B3FFFFFF"
            android:textSize="14sp"
            app:fontFamily="@font/sfprotext_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            tools:text="@tools:sample/lorem/random" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/cast"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:fontFamily="@font/sfprotext_medium"
            app:layout_constraintEnd_toEndOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="@id/tv_description"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_cast"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_list_cast"
            tools:orientation="horizontal" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>