<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_25272A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_app_bar"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/black_202123"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_movie_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/title_home"
        android:src="@drawable/ic_movie_db"
        app:layout_constraintBottom_toBottomOf="@id/view_app_bar"
        app:layout_constraintEnd_toStartOf="@id/iv_notification"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/view_app_bar"
        app:layout_constraintTop_toTopOf="@id/view_app_bar" />

    <ImageView
        android:id="@+id/iv_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/title_home"
        android:src="@drawable/ic_notification"
        app:layout_constraintBottom_toBottomOf="@id/view_app_bar"
        app:layout_constraintEnd_toEndOf="@id/view_app_bar"
        app:layout_constraintTop_toTopOf="@id/view_app_bar" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/view_app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingTop="12dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_banner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:0.69"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_popular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/popular_mov"
                android:textAppearance="@style/title_mov"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vp_banner" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:paddingStart="18dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_popular"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:orientation="horizontal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_coming_soon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/coming_soon"
                android:textAppearance="@style/title_mov"
                app:layout_constraintEnd_toEndOf="@id/tv_title_popular"
                app:layout_constraintStart_toStartOf="@id/tv_title_popular"
                app:layout_constraintTop_toBottomOf="@id/rv_popular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_coming_soon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:paddingStart="18dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_coming_soon"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:orientation="horizontal" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>